package flow;

public class NormalItem extends Item {

    public NormalItem(String name, double price, boolean isBudgetBrand, int quantity, String unit) {
        super(name, price, isBudgetBrand, quantity, unit);
    }

    @Override
    public String toString() {
        return super.toString();
    }
}
