@startuml

abstract class Item {
    - String name
    - double price
    - int quantity
    - boolean isBudgetBrand
    - String unit
    + getName(): String
    + getNormalprice(): double
    + getQuantity(): int
    + isBudgetBrand(): boolean
    + getUnit(): String
    + toString(): String
}

class NormalItem {
    + NormalItem(name, price, isBudgetBrand, quantity, unit)
    + String toString()
}

class DiscountedItems {
    - double normalPrice
    + getNormalPrice(): double
    + toString(): String
}

Item <|-- NormalItem
Item <|-- DiscountedItems

class CartItem {
    - Item : item
    - int quantity
    + getTotal(): double
    + addQuantity(q: int)
    + getItem(): Item
    + getQuantity(): int
}

class ShoppingCart {
    - Map<String, CartItem> : items
    + addItem(item: Item, quantity: int)
    + getItems(): Collection<CartItem>
    + isEmpty(): boolean
}

ShoppingCart "1" *-- "*" CartItem
CartItem "1" --> "1" Item

class ReceiptLine {
    - String itemName
    - double normalPrice
    - double actualPrice
    - int quantity
    - double total
    - double discount
    + getTotal(): double
    + getItemName(): String
    + getQuantity(): int
    + getDiscount(): double
    + toString(): String
}

class Receipt {
    - List<ReceiptLine> : lines
    - double total
    - double VAT
    + addLine(line: ReceiptLine)
    + calculateVAT(rate: double)
    + String toString()
}

Receipt "1" *-- "*" ReceiptLine

class TextUI {
    - Scanner scanner
    + welcome()
    + askHowManyItems(): int
    + showCart(cart: ShoppingCart)
    + askToPay(): boolean
    + showReceipt(receipt: Receipt)
}

class ItemRepository {
    + loadItems(normalPath: String, discountedPath: String): List<Item>
    - loadCsv(path: String, discounted: boolean): List<Item>
}

class Shop {
    + generateRandomCart(items: List<Item>, count: int): ShoppingCart
}

class CashRegister {
    - double VAT_RATE = 0.25
    + scanCart(cart: ShoppingCart): Receipt
}

class Main {
    + main()
}

Main --> TextUI
Main --> ItemRepository
Main --> Shop
Main --> CashRegister

@enduml
